--- a/files/conf.d/defaults.cfg
+++ b/files/conf.d/defaults.cfg
@@ -1,13 +1,19 @@
-define contact{
-       contact_name                    root
-       alias                           Root
-       service_notification_period     24x7
-       host_notification_period        24x7
-       service_notification_options    w,u,c,r
-       host_notification_options       d,r
-       service_notification_commands   notify-service-by-email
-       host_notification_commands      notify-host-by-email
-       email                           root
+define contact {
+       name generic-contact
+       service_notification_period 24x7
+       host_notification_period 24x7
+       service_notification_options w,u,c,r
+       host_notification_options d,r
+       service_notification_commands notify-service-by-email
+       host_notification_commands notify-host-by-email
+       register 0
+}
+
+define contact {
+       contact_name root
+       alias Root
+       email root
+       use generic-contact
 }
 
 define contactgroup{
