Include apache2::php5 to use fcgi configuration

--- a/files/apache2.conf
+++ b/files/apache2.conf
@@ -28,9 +28,9 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 #Alias /nagios /usr/share/nagios3/htdocs
 
 <DirectoryMatch (/usr/share/nagios3/htdocs|/usr/lib/cgi-bin/nagios3)>
-	Options FollowSymLinks
+	Options FollowSymLinks ExecCGI
 
-	DirectoryIndex index.html
+	DirectoryIndex index.php index.html 
 
 	AllowOverride AuthConfig
 	Order Allow,Deny
