Create mail-satellites hostgroup to check admin mail delivery

--- a/files/nrpe_defaults.cfg
+++ b/files/nrpe_defaults.cfg
@@ -4,3 +4,4 @@ command[check_disk]=/usr/lib/nagios/plugins/check_disk -w $ARG1$ -c $ARG2$ -p $A
 command[check_procs]=/usr/lib/nagios/plugins/check_procs -w $ARG1$ -c $ARG2$ -s $ARG3$
 
 command[check_apt]=/usr/lib/nagios/plugins/check_apt
+command[check_mailq_satellite]=/usr/lib/nagios/plugins/check_mailq -w 1 -c 5
