Add simple check_mailq command

--- a/files/services/mail-satellite-service.cfg
+++ b/files/services/mail-satellite-service.cfg
@@ -9,3 +9,9 @@ define service {
        service_description Mail Queue
        check_command check_nrpe_1arg!check_mailq_satellite
 }
+
+# Simple check_mailq (without specified mailer) doesn't exist :-/
+define command {
+       command_name    check_mailq
+	     command_line    /usr/lib/nagios/plugins/check_mailq -w '$ARG1$' -c '$ARG2$'
+}
