--- a/files/apache2.conf
+++ b/files/apache2.conf
@@ -36,14 +36,14 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 	Order Allow,Deny
 	Allow From All
 
-  AuthPAM_Enabled on
-  AuthType Basic
-  AuthName "PAM"
+  # AuthPAM_Enabled on
+  # AuthType Basic
+  # AuthName "PAM"
 
-  AuthBasicAuthoritative off
-  AuthUserFile /dev/null
+  # AuthBasicAuthoritative off
+  # AuthUserFile /dev/null
 
-  require valid-user
+  # require valid-user
 </DirectoryMatch>
 
 <Directory /etc/nagios3/stylesheets>
