Add check_http_vhost_auth command

--- a/files/services/http.cfg
+++ b/files/services/http.cfg
@@ -25,6 +25,11 @@ define command{
 }
 
 define command{
+	command_name	check_http_vhost_auth
+	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -e "401 Auth"
+}
+
+define command{
 	command_name	check_http_vhost_url_auth
 	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$' -e "401 Auth"
 }
