--- a/files/services/http.cfg
+++ b/files/services/http.cfg
@@ -4,8 +4,18 @@ define command{
 }
 
 define command{
+	command_name	check_https_vhost
+	command_line	/usr/lib/nagios/plugins/check_http --ssl -H '$ARG1$' -I '$HOSTADDRESS$'
+}
+
+define command{
 	command_name	check_http_vhost_url
 	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$'
+}
+
+define command{
+	command_name	check_https_vhost_url
+	command_line	/usr/lib/nagios/plugins/check_http --ssl -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$'
 }
 
 define command{
