--- a/files/services/http.cfg
+++ b/files/services/http.cfg
@@ -25,23 +25,23 @@ define command{
 
 define command{
 	command_name	check_http_url_auth
-	command_line	/usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -u '$ARG1$' -e "401 Auth"
+	command_line	/usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -u '$ARG1$' -e "401 Auth, 401 Unauth"
 }
 
 define command{
 	command_name	check_http_url_port_auth
   # only valid for nagios > 3.0 -e "HTTP/1.0 401,HTTP/1.1 401"
-	command_line	/usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -u '$ARG1$' -p '$ARG2$' -e "401 Auth"
+	command_line	/usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -u '$ARG1$' -p '$ARG2$' -e "401 Auth, 401 Unauth"
 }
 
 define command{
 	command_name	check_http_vhost_auth
-	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -e "401 Auth"
+	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -e "401 Auth, 401 Unauth"
 }
 
 define command{
 	command_name	check_http_vhost_url_auth
-	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$' -e "401 Auth"
+	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$' -e "401 Auth, 401 Unauth"
 }
 
 define command{
