import check_puppetmaster command

--- a/files/services/puppet.cfg
+++ b/files/services/puppet.cfg
@@ -9,3 +9,8 @@ define service {
        check_command check_nrpe_1arg!check_puppet_lock
        use generic-service
 }
+
+define command {
+        command_name    check_puppetmaster
+        command_line    sudo -u puppet /usr/local/lib/nagios/plugins/check_puppetmaster -H '$HOSTADDRESS$'
+}
