add memory usage passive checks from munin

--- a/files/services/munin-plugins.cfg
+++ b/files/services/munin-plugins.cfg
@@ -15,6 +15,12 @@ define service {
 define service {
        use                             passive-service
        hostgroup_name                  munin-nodes
+       service_description             Memory usage
+}
+
+define service {
+       use                             passive-service
+       hostgroup_name                  munin-nodes
        service_description             CPU usage
 }
 
