add a check for https with vhost and auth

--- a/files/services/http.cfg
+++ b/files/services/http.cfg
@@ -19,6 +19,11 @@ define command{
 }
 
 define command{
+	command_name	check_https_vhost_url_with_auth
+	command_line	/usr/lib/nagios/plugins/check_http --ssl -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$' -a '$ARG3$'
+}
+
+define command{
 	command_name	check_http_url
 	command_line	/usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -u '$ARG1$'
 }
