add a http_vhost_url_content check command

--- a/files/services/http.cfg
+++ b/files/services/http.cfg
@@ -24,6 +24,11 @@ define command{
 }
 
 define command{
+	command_name	check_http_vhost_url_content
+	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$' -s '$ARG3$'
+}
+
+define command{
 	command_name	check_http_url
 	command_line	/usr/lib/nagios/plugins/check_http -I '$HOSTADDRESS$' -u '$ARG1$'
 }
