avoid notification for APT

--- a/files/services/apt-service.cfg
+++ b/files/services/apt-service.cfg
@@ -11,4 +11,5 @@ define service {
        hostgroup_name apt-servers
        service_description Apt updates
        check_command check_nrpe_1arg!check_apt
+       notification_period never
 }
