--- a/files/apache2.conf
+++ b/files/apache2.conf
@@ -6,26 +6,12 @@
 
 ScriptAlias /cgi-bin/nagios3 /usr/lib/cgi-bin/nagios3
 ScriptAlias /nagios3/cgi-bin /usr/lib/cgi-bin/nagios3
-# nagios 1.x:
-#ScriptAlias /cgi-bin/nagios /usr/lib/cgi-bin/nagios3
-#ScriptAlias /nagios/cgi-bin /usr/lib/cgi-bin/nagios3
-# nagios 2.x: 
-#ScriptAlias /cgi-bin/nagios2 /usr/lib/cgi-bin/nagios3
-#ScriptAlias /nagios2/cgi-bin /usr/lib/cgi-bin/nagios3
 
 # Where the stylesheets (config files) reside
 Alias /nagios3/stylesheets /etc/nagios3/stylesheets
-# nagios 1.x:
-#Alias /nagios/stylesheets /etc/nagios3/stylesheets
-# nagios 2.x:
-#Alias /nagios2/stylesheets /etc/nagios3/stylesheets
 
 # Where the HTML pages live
 Alias /nagios3 /usr/share/nagios3/htdocs
-# nagios 2.x: 
-#Alias /nagios2 /usr/share/nagios3/htdocs
-# nagios 1.x:
-#Alias /nagios /usr/share/nagios3/htdocs
 
 <DirectoryMatch (/usr/share/nagios3/htdocs|/usr/lib/cgi-bin/nagios3)>
 	Options FollowSymLinks ExecCGI
@@ -33,8 +19,7 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 	DirectoryIndex index.php index.html 
 
 	AllowOverride AuthConfig
-	Order Allow,Deny
-	Allow From All
+	Require all granted
 
   # AuthPAM_Enabled on
   # AuthType Basic
@@ -47,8 +32,7 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 </DirectoryMatch>
 
 <Directory /etc/nagios3/stylesheets>
-	Order Allow,Deny
-	Allow From All
+	Require all granted
 </Directory>
 
 # Enable this ScriptAlias if you want to enable the grouplist patch.
@@ -57,6 +41,4 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 # left pane of the Nagios web interface
 # XXX This is not tested for nagios 2.x use at your own peril
 #ScriptAlias /nagios3/side.html /usr/lib/cgi-bin/nagios3/grouplist.cgi
-# nagios 1.x:
-#ScriptAlias /nagios/side.html /usr/lib/cgi-bin/nagios3/grouplist.cgi
 
