add a check_http with no body waiting

--- a/files/services/http.cfg
+++ b/files/services/http.cfg
@@ -14,6 +14,11 @@ define command{
 }
 
 define command{
+	command_name	check_http_vhost_url_nobody
+	command_line	/usr/lib/nagios/plugins/check_http -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$' -N
+}
+
+define command{
 	command_name	check_https_vhost_url
 	command_line	/usr/lib/nagios/plugins/check_http --ssl -H '$ARG1$' -I '$HOSTADDRESS$' -u '$ARG2$'
 }
