--- a/files/apache24.conf
+++ b/files/apache24.conf
@@ -19,8 +19,7 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 	DirectoryIndex index.php index.html 
 
 	AllowOverride AuthConfig
-    Order Allow,Deny
-    Allow from All
+	Require all granted
 
   # AuthPAM_Enabled on
   # AuthType Basic
@@ -33,8 +32,7 @@ Alias /nagios3 /usr/share/nagios3/htdocs
 </DirectoryMatch>
 
 <Directory /etc/nagios3/stylesheets>
-    Order Allow,Deny
-    Allow from All
+	Require all granted
 </Directory>
 
 # Enable this ScriptAlias if you want to enable the grouplist patch.
